--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -17,3 +17,10 @@ prijsPerTicket.max.invalid=De prijs per ticket is maximaal 149.99.
 vrijePlaatsen.range.invalid=Aantal plaatsen moet tussen 1 en 50 liggen.
 disciplines.duplicate=Dezelfde discipline mag niet meerdere keren gekozen worden.
 disciplines.max.exceeded=Er mogen maximaal 2 disciplines ingevuld worden.
+
+
+aantal.negative=Het aantal te kopen tickets moet groter zijn dan 0.
+aantal.limit.exceeded=Je kunt niet meer dan 20 tickets voor deze specifieke wedstrijd kopen.
+aantal.total.limit.exceeded=Je kunt in totaal niet meer dan 100 tickets kopen voor alle wedstrijden.
+wedstrijd.not.exist=De geselecteerde wedstrijd bestaat niet.
+aantal.not.enough=Er zijn niet genoeg vrije plaatsen beschikbaar voor deze aankoop.
