--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -7,7 +7,6 @@ olympicNumber.0.invalid=Olympisch nummer mag niet beginnen met 0.
 olympicNumber.same.invalid=Olympisch nummer 2 mag niet hetzelfde zijn als nummer 1.
 olympicNumber.exists.invalid=Dit Olympisch nummer bestaat al.
 
-
 olympicNumber.start.invalid=Het nummer mag niet met 0 beginnen.
 olympicNumber.digits.different.invalid=Het eerste en het laatste cijfer moeten verschillend zijn.
 olympicNumber.duplicate=Olympisch nummer1 komt reeds voor in de databank.
@@ -18,9 +17,25 @@ vrijePlaatsen.range.invalid=Aantal plaatsen moet tussen 1 en 50 liggen.
 disciplines.duplicate=Dezelfde discipline mag niet meerdere keren gekozen worden.
 disciplines.max.exceeded=Er mogen maximaal 2 disciplines ingevuld worden.
 
-
 aantal.negative=Het aantal te kopen tickets moet groter zijn dan 0.
 aantal.limit.exceeded=Je kunt niet meer dan 20 tickets voor deze specifieke wedstrijd kopen.
 aantal.total.limit.exceeded=Je kunt in totaal niet meer dan 100 tickets kopen voor alle wedstrijden.
 wedstrijd.not.exist=De geselecteerde wedstrijd bestaat niet.
 aantal.not.enough=Er zijn niet genoeg vrije plaatsen beschikbaar voor deze aankoop.
+
+label.datumTijd=Datum en Tijd
+label.stadium=Stadium
+label.prijsPerTicket=Prijs per Ticket
+label.vrijePlaatsen=Aantal plaatsen
+label.olympicNumber1=Olympisch-nummer1
+label.olympicNumber2=Olympisch-nummer2
+label.disciplines=Disciplines
+button.toevoegen=Wedstrijd Toevoegen
+
+label.ticketprice=Prijs per ticket: 
+label.quantity=Aantal tickets
+label.totalprice=Totaalprijs:
+button.buyTickets=Koop Tickets
+button.logout=Uitloggen
+
+date.format=dd/MM/yyyy
